[gd_scene load_steps=5 format=3 uid="uid://dyxqxipmuafyr"]

[ext_resource type="Script" path="res://Scripts/buttons.gd" id="1_5cjj3"]
[ext_resource type="Texture2D" uid="uid://dyfrlj84u6c7m" path="res://Artwork/UI/Paper.png" id="1_56k5l"]
[ext_resource type="Texture2D" uid="uid://bu73eq4iw2st3" path="res://Artwork/UI/Rock.png" id="2_gm6k4"]
[ext_resource type="Texture2D" uid="uid://b7t2tv4rm66r1" path="res://Artwork/UI/Scissors.png" id="3_khfew"]

[node name="Buttons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5cjj3")

[node name="ControlButtons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = 48.0
offset_right = 107.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ControlButtons"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PaperButton" type="TextureButton" parent="ControlButtons/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource("1_56k5l")

[node name="RockButton" type="TextureButton" parent="ControlButtons/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("2_gm6k4")

[node name="ScissorsButton" type="TextureButton" parent="ControlButtons/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("3_khfew")

[connection signal="pressed" from="ControlButtons/MarginContainer/PaperButton" to="." method="_on_paper_button_pressed"]
[connection signal="pressed" from="ControlButtons/MarginContainer/RockButton" to="." method="_on_rock_button_pressed"]
[connection signal="pressed" from="ControlButtons/MarginContainer/ScissorsButton" to="." method="_on_scissors_button_pressed"]
